--- a/Views/Books/Details.cshtml
+++ b/Views/Books/Details.cshtml
@@ -26,7 +26,7 @@
             @Html.DisplayNameFor(model => model.Author)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Author.ID)
+            @Html.DisplayFor(model => model.Author.FullName)
         </dd>
     </dl>
 </div>
