--- a/Views/Publishers/Index.cshtml
+++ b/Views/Publishers/Index.cshtml
@@ -54,7 +54,7 @@
 
 @if (Model.Books != null)
 {
-    <h3>Books Published by Selected Publisher</h3>
+    <h3>Books published by selected publisher</h3>
     <table class="table">
         <tr>
             <th></th>
@@ -81,6 +81,37 @@
                 </td>
                 <td>
                     @item.Price
+                </td>
+            </tr>
+        }
+    </table>
+}
+
+@if (Model.Orders != null)
+{
+    <h3>Clients who ordered the selected book</h3>
+    <table class="table">
+        <tr>
+            <th>Name</th>
+            <th>Address</th>
+            <th>Birth date</th>
+        </tr>
+        @foreach (var item in Model.Orders)
+        {
+            string selectedRow = "";
+            if (item.OrderID == (int?)ViewData["BookID"])
+            {
+                selectedRow = "Success";
+            }
+            <tr class="@selectedRow">
+                <td>
+                    @item.Customer.Name
+                </td>
+                <td>
+                    @item.Customer.Adress
+                </td>
+                <td>
+                    @item.Customer.BirthDate.ToString("MMMM dd, yyyy")
                 </td>
             </tr>
         }
